# mascot-poster

./: .dockerignore  .env.automation.example  .env.example  .gitignore  2026-07-11T09-58_export.csv  AGENTS.md  Dockerfile  README.md  SKILLS.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  streamlit_app.py
assets/mascot_poses_foot_pivot/: layout.json
data/: description_history.json  topic_history.json
docs/: mini-pc-deployment.md
n8n/: README.md
n8n/workflows/: analytics_collection.json  approval_flow.json  export_idea_history.json  generate_video.json  import_idea_batch.json  publish_video.json
scripts/: check_searxng.py  crop_mascot_poses.py  generate_fixtures.py  generate_mascot_calibration.py  prepare_reference_assets.py  reframe_mascot_foot_pivot.py  render_reference_acceptance.py  render_sample.py  validate_assets.py
searxng/: settings.local.yml  settings.yml
src/app/: config.py  main.py
steps/: README.md  step_01_phase1_deterministic_renderer.md  step_02_phase2_tts.md  step_03_phase3_llm_script_scene.md  step_04_phase4_research_verification.md  step_05_phase5_image_generation.md  step_06_phase6_api_job_queue.md  step_07_phase7_n8n_orchestration.md  step_08_phase8_publishing_analytics.md
templates/: comparison_v1.json  reference_v1.json
tests/fixtures/: narration_script.json  render_sample.json  render_tts_sample.json  research_package.json  script_package.json
tests/unit/: test_automation_api.py  test_automation_jobs.py  test_automation_worker.py  test_buffer_client.py  test_cleanup.py  test_database_schema.py  test_script.py  (+22 more)
(+136 files in other folders)
