[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-short-video-platform"
version = "0.1.0"
description = "Automated short-form comparison video generation for TikTok, YouTube Shorts, and Instagram Reels"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.42",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.package-data]
"app" = ["py.typed"]
